// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text-editor Renders \`text-editor\` with custom props 1`] = `
<div>
  <span
    class="theme--light v-label text-editor__label mb-2"
  >
    Text editor label
  </span>
  <div
    class="text-editor error--text"
  >
    <div
      class="jodit_container jodit_default_theme jodit_toolbar_size-middle jodit_wysiwyg_mode"
      contenteditable="false"
      style="min-height: 200px; min-width: 200px; max-width: 100%; height: auto; width: auto;"
    >
      <ul
        class="jodit_toolbar"
        style="width: auto;"
      >
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-empty"
        >
          <a>
            <span>
              <span
                class="jodit_icon jodit_icon_empty"
              />
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-empty"
        >
          <a>
            <span>
              <span
                class="jodit_icon jodit_icon_empty"
              />
            </span>
          </a>
        </li>
      </ul>
      <div
        class="jodit_workplace"
        contenteditable="false"
        style="min-height: 200px; height: auto;"
      >
        <div
          class="jodit_progress_bar"
        >
          <div />
        </div>
        <div
          aria-disabled="false"
          class="jodit_wysiwyg"
          contenteditable="true"
          spellcheck="true"
          style="min-height: 198px;"
          tabindex="-1"
        >
          <div>
            <p>
              Paragraph
            </p>
          </div>
        </div>
        <div
          class="jodit_error_box_for_messages"
        />
        <span
          class="jodit_placeholder"
          style="display: none;"
        >
          Type something
        </span>
        <div
          class="jodit_source"
        >
          <textarea
            class="jodit_source_mirror"
            style="height: 0px; min-height: 198px;"
          />
        </div>
        <div
          class="jodit_search"
        >
          <div
            class="jodit_search_box"
          >
            <div
              class="jodit_search_inputs"
            >
              <input
                class="jodit_search-query"
                placeholder="Search for"
                tabindex="0"
                type="text"
              />
              <input
                class="jodit_search-replace"
                placeholder="Replace with"
                tabindex="0"
                type="text"
              />
            </div>
            <div
              class="jodit_search_counts"
            >
              <span>
                0/0
              </span>
            </div>
            <div
              class="jodit_search_buttons"
            >
              <button
                class="jodit_search_buttons-next"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  
    
                  <path
                    d="M1395 736q0 13-10 23l-466 466q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l393 393 393-393q10-10 23-10t23 10l50 50q10 10 10 23z"
                  />
                  

                </svg>
              </button>
              <button
                class="jodit_search_buttons-prev"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  <path
                    d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
                  />
                </svg>
              </button>
              <button
                class="jodit_search_buttons-cancel"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 16 16"
                >
                  
    
                  <g
                    transform="translate(0,-1036.3622)"
                  >
                    
        
                    <path
                      d="m 2,1050.3622 12,-12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                    
        
                    <path
                      d="m 2,1038.3622 12,12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                    
    
                  </g>
                  

                </svg>
              </button>
              <button
                class="jodit_search_buttons-replace"
                tabindex="0"
                type="button"
              >
                Replace
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jodit_statusbar"
        style="display: block;"
      >
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Chars: 9
          </span>
        </div>
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Words: 1
          </span>
        </div>
        <div
          class="jodit_statusbar_item"
        >
          <ul
            class="jodit_xpath"
          >
            <li
              class="jodit_toolbar_btn jodit_toolbar_btn-selectall"
            >
              <a>
                <span>
                  <svg
                    class="jodit_icon jodit_icon_selectall"
                    viewBox="0 0 18 18"
                  >
                    
    
                    <g
                      fill-rule="evenodd"
                      stroke="none"
                      stroke-width="1"
                    >
                      
        
                      <g
                        transform="translate(-381.000000, -381.000000)"
                      >
                        
            
                        <g
                          transform="translate(381.000000, 381.000000)"
                        >
                          
                
                          <path
                            d="M0,2 L2,2 L2,0 C0.9,0 0,0.9 0,2 L0,2 Z M0,10 L2,10 L2,8 L0,8 L0,10 L0,10 Z M4,18 L6,18 L6,16 L4,16 L4,18 L4,18 Z M0,6 L2,6 L2,4 L0,4 L0,6 L0,6 Z M10,0 L8,0 L8,2 L10,2 L10,0 L10,0 Z M16,0 L16,2 L18,2 C18,0.9 17.1,0 16,0 L16,0 Z M2,18 L2,16 L0,16 C0,17.1 0.9,18 2,18 L2,18 Z M0,14 L2,14 L2,12 L0,12 L0,14 L0,14 Z M6,0 L4,0 L4,2 L6,2 L6,0 L6,0 Z M8,18 L10,18 L10,16 L8,16 L8,18 L8,18 Z M16,10 L18,10 L18,8 L16,8 L16,10 L16,10 Z M16,18 C17.1,18 18,17.1 18,16 L16,16 L16,18 L16,18 Z M16,6 L18,6 L18,4 L16,4 L16,6 L16,6 Z M16,14 L18,14 L18,12 L16,12 L16,14 L16,14 Z M12,18 L14,18 L14,16 L12,16 L12,18 L12,18 Z M12,2 L14,2 L14,0 L12,0 L12,2 L12,2 Z M4,14 L14,14 L14,4 L4,4 L4,14 L4,14 Z M6,6 L12,6 L12,12 L6,12 L6,6 L6,6 Z"
                          />
                          
            
                        </g>
                        
        
                      </g>
                      
    
                    </g>
                    

                  </svg>
                </span>
              </a>
            </li>
            ﻿
          </ul>
        </div>
      </div>
      <div
        class="jodit-add-new-line"
        role="button"
        tabindex="-1"
        title="Break"
      >
        <span>
          <svg
            viewBox="0 0 128 128"
            xml:space="preserve"
          >
            
    
            <g>
              
        
              <polygon
                points="112.4560547,23.3203125 112.4560547,75.8154297 31.4853516,75.8154297 31.4853516,61.953125     16.0131836,72.6357422 0.5410156,83.3164063 16.0131836,93.9990234 31.4853516,104.6796875 31.4853516,90.8183594     112.4560547,90.8183594 112.4560547,90.8339844 127.4589844,90.8339844 127.4589844,23.3203125   "
              />
              
    
            </g>
            

          </svg>
        </span>
      </div>
    </div>
    <div
      style="display: none;"
    >
      <div>
        <p>
          Paragraph
        </p>
      </div>
    </div>
    <!---->
    <div
      class="text-editor__details"
    >
      <div
        class="v-messages theme--light error--text"
      >
        <div
          class="v-messages__wrapper"
        >
          <div
            class="v-messages__message"
          >
            Error
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`text-editor Renders \`text-editor\` with default props 1`] = `
<div>
  <span
    class="theme--light v-label text-editor__label mb-2"
    style="display: none;"
  >
    
  </span>
  <div
    class="text-editor"
  >
    <div
      class="jodit_container jodit_default_theme jodit_toolbar_size-middle jodit_wysiwyg_mode"
      contenteditable="false"
      style="min-height: 200px; min-width: 200px; max-width: 100%; height: auto; width: auto;"
    >
      <ul
        class="jodit_toolbar"
        style="width: auto;"
      >
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-bold"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_bold"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M747 1521q74 32 140 32 376 0 376-335 0-114-41-180-27-44-61.5-74t-67.5-46.5-80.5-25-84-10.5-94.5-2q-73 0-101 10 0 53-.5 159t-.5 158q0 8-1 67.5t-.5 96.5 4.5 83.5 12 66.5zm-14-746q42 7 109 7 82 0 143-13t110-44.5 74.5-89.5 25.5-142q0-70-29-122.5t-79-82-108-43.5-124-14q-50 0-130 13 0 50 4 151t4 152q0 27-.5 80t-.5 79q0 46 1 69zm-541 889l2-94q15-4 85-16t106-27q7-12 12.5-27t8.5-33.5 5.5-32.5 3-37.5.5-34v-65.5q0-982-22-1025-4-8-22-14.5t-44.5-11-49.5-7-48.5-4.5-30.5-3l-4-83q98-2 340-11.5t373-9.5q23 0 68.5.5t67.5.5q70 0 136.5 13t128.5 42 108 71 74 104.5 28 137.5q0 52-16.5 95.5t-39 72-64.5 57.5-73 45-84 40q154 35 256.5 134t102.5 248q0 100-35 179.5t-93.5 130.5-138 85.5-163.5 48.5-176 14q-44 0-132-3t-132-3q-106 0-307 11t-231 12z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-image"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_image"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M576 576q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1024 384v448h-1408v-192l320-320 160 160 512-512zm96-704h-1600q-13 0-22.5 9.5t-9.5 22.5v1216q0 13 9.5 22.5t22.5 9.5h1600q13 0 22.5-9.5t9.5-22.5v-1216q0-13-9.5-22.5t-22.5-9.5zm160 32v1216q0 66-47 113t-113 47h-1600q-66 0-113-47t-47-113v-1216q0-66 47-113t113-47h1600q66 0 113 47t47 113z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-brush"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_brush"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M896 1152q0-36-20-69-1-1-15.5-22.5t-25.5-38-25-44-21-50.5q-4-16-21-16t-21 16q-7 23-21 50.5t-25 44-25.5 38-15.5 22.5q-20 33-20 69 0 53 37.5 90.5t90.5 37.5 90.5-37.5 37.5-90.5zm512-128q0 212-150 362t-362 150-362-150-150-362q0-145 81-275 6-9 62.5-90.5t101-151 99.5-178 83-201.5q9-30 34-47t51-17 51.5 17 33.5 47q28 93 83 201.5t99.5 178 101 151 62.5 90.5q81 127 81 275z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-paragraph"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_paragraph"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1534 189v73q0 29-18.5 61t-42.5 32q-50 0-54 1-26 6-32 31-3 11-3 64v1152q0 25-18 43t-43 18h-108q-25 0-43-18t-18-43v-1218h-143v1218q0 25-17.5 43t-43.5 18h-108q-26 0-43.5-18t-17.5-43v-496q-147-12-245-59-126-58-192-179-64-117-64-259 0-166 88-286 88-118 209-159 111-37 417-37h479q25 0 43 18t18 43z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-left"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_left"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1792 1344v128q0 26-19 45t-45 19h-1664q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1664q26 0 45 19t19 45zm-384-384v128q0 26-19 45t-45 19h-1280q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1280q26 0 45 19t19 45zm256-384v128q0 26-19 45t-45 19h-1536q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1536q26 0 45 19t19 45zm-384-384v128q0 26-19 45t-45 19h-1152q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1152q26 0 45 19t19 45z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-undo jodit_disabled"
          disabled="disabled"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_undo"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1664 896q0 156-61 298t-164 245-245 164-298 61q-172 0-327-72.5t-264-204.5q-7-10-6.5-22.5t8.5-20.5l137-138q10-9 25-9 16 2 23 12 73 95 179 147t225 52q104 0 198.5-40.5t163.5-109.5 109.5-163.5 40.5-198.5-40.5-198.5-109.5-163.5-163.5-109.5-198.5-40.5q-98 0-188 35.5t-160 101.5l137 138q31 30 14 69-17 40-59 40h-448q-26 0-45-19t-19-45v-448q0-42 40-59 39-17 69 14l130 129q107-101 244.5-156.5t284.5-55.5q156 0 298 61t245 164 164 245 61 298z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-redo jodit_disabled"
          disabled="disabled"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_redo"
                viewBox="0 0 1792 1792"
              >
                
    
                <path
                  d="M1664 256v448q0 26-19 45t-45 19h-448q-42 0-59-40-17-39 14-69l138-138q-148-137-349-137-104 0-198.5 40.5t-163.5 109.5-109.5 163.5-40.5 198.5 40.5 198.5 109.5 163.5 163.5 109.5 198.5 40.5q119 0 225-52t179-147q7-10 23-12 14 0 25 9l137 138q9 8 9.5 20.5t-7.5 22.5q-109 132-264 204.5t-327 72.5q-156 0-298-61t-245-164-164-245-61-298 61-298 164-245 245-164 298-61q147 0 284.5 55.5t244.5 156.5l130-129q29-31 70-14 39 17 39 59z"
                />
                

              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-eraser"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_eraser"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M832 1408l336-384h-768l-336 384h768zm1013-1077q15 34 9.5 71.5t-30.5 65.5l-896 1024q-38 44-96 44h-768q-38 0-69.5-20.5t-47.5-54.5q-15-34-9.5-71.5t30.5-65.5l896-1024q38-44 96-44h768q38 0 69.5 20.5t47.5 54.5z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-dots"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_dots"
                enable-background="new 0 0 24 24"
                viewBox="0 0 24 24"
                xml:space="preserve"
              >
                
    
                <circle
                  cx="12"
                  cy="12"
                  r="2.2"
                />
                
    
                <circle
                  cx="12"
                  cy="5"
                  r="2.2"
                />
                
    
                <circle
                  cx="12"
                  cy="19"
                  r="2.2"
                />
                

              </svg>
            </span>
          </a>
        </li>
      </ul>
      <div
        class="jodit_workplace"
        contenteditable="false"
        style="min-height: 200px; height: auto;"
      >
        <div
          class="jodit_progress_bar"
        >
          <div />
        </div>
        <div
          aria-disabled="false"
          class="jodit_wysiwyg"
          contenteditable="true"
          spellcheck="true"
          style="min-height: 198px;"
          tabindex="-1"
        />
        <div
          class="jodit_error_box_for_messages"
        />
        <span
          class="jodit_placeholder"
          style="display: block;"
        >
          Type something
        </span>
        <div
          class="jodit_source"
        >
          <textarea
            class="jodit_source_mirror"
            style="height: 0px; min-height: 198px;"
          />
        </div>
        <div
          class="jodit_search"
        >
          <div
            class="jodit_search_box"
          >
            <div
              class="jodit_search_inputs"
            >
              <input
                class="jodit_search-query"
                placeholder="Search for"
                tabindex="0"
                type="text"
              />
              <input
                class="jodit_search-replace"
                placeholder="Replace with"
                tabindex="0"
                type="text"
              />
            </div>
            <div
              class="jodit_search_counts"
            >
              <span>
                0/0
              </span>
            </div>
            <div
              class="jodit_search_buttons"
            >
              <button
                class="jodit_search_buttons-next"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  
    
                  <path
                    d="M1395 736q0 13-10 23l-466 466q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l393 393 393-393q10-10 23-10t23 10l50 50q10 10 10 23z"
                  />
                  

                </svg>
              </button>
              <button
                class="jodit_search_buttons-prev"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  <path
                    d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
                  />
                </svg>
              </button>
              <button
                class="jodit_search_buttons-cancel"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 16 16"
                >
                  
    
                  <g
                    transform="translate(0,-1036.3622)"
                  >
                    
        
                    <path
                      d="m 2,1050.3622 12,-12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                    
        
                    <path
                      d="m 2,1038.3622 12,12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                    
    
                  </g>
                  

                </svg>
              </button>
              <button
                class="jodit_search_buttons-replace"
                tabindex="0"
                type="button"
              >
                Replace
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jodit_statusbar"
        style="display: block;"
      >
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Chars: 0
          </span>
        </div>
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Words: 0
          </span>
        </div>
        <div
          class="jodit_statusbar_item"
        >
          <ul
            class="jodit_xpath"
          >
            <li
              class="jodit_toolbar_btn jodit_toolbar_btn-selectall"
            >
              <a>
                <span>
                  <svg
                    class="jodit_icon jodit_icon_selectall"
                    viewBox="0 0 18 18"
                  >
                    
    
                    <g
                      fill-rule="evenodd"
                      stroke="none"
                      stroke-width="1"
                    >
                      
        
                      <g
                        transform="translate(-381.000000, -381.000000)"
                      >
                        
            
                        <g
                          transform="translate(381.000000, 381.000000)"
                        >
                          
                
                          <path
                            d="M0,2 L2,2 L2,0 C0.9,0 0,0.9 0,2 L0,2 Z M0,10 L2,10 L2,8 L0,8 L0,10 L0,10 Z M4,18 L6,18 L6,16 L4,16 L4,18 L4,18 Z M0,6 L2,6 L2,4 L0,4 L0,6 L0,6 Z M10,0 L8,0 L8,2 L10,2 L10,0 L10,0 Z M16,0 L16,2 L18,2 C18,0.9 17.1,0 16,0 L16,0 Z M2,18 L2,16 L0,16 C0,17.1 0.9,18 2,18 L2,18 Z M0,14 L2,14 L2,12 L0,12 L0,14 L0,14 Z M6,0 L4,0 L4,2 L6,2 L6,0 L6,0 Z M8,18 L10,18 L10,16 L8,16 L8,18 L8,18 Z M16,10 L18,10 L18,8 L16,8 L16,10 L16,10 Z M16,18 C17.1,18 18,17.1 18,16 L16,16 L16,18 L16,18 Z M16,6 L18,6 L18,4 L16,4 L16,6 L16,6 Z M16,14 L18,14 L18,12 L16,12 L16,14 L16,14 Z M12,18 L14,18 L14,16 L12,16 L12,18 L12,18 Z M12,2 L14,2 L14,0 L12,0 L12,2 L12,2 Z M4,14 L14,14 L14,4 L4,4 L4,14 L4,14 Z M6,6 L12,6 L12,12 L6,12 L6,6 L6,6 Z"
                          />
                          
            
                        </g>
                        
        
                      </g>
                      
    
                    </g>
                    

                  </svg>
                </span>
              </a>
            </li>
            ﻿
          </ul>
        </div>
      </div>
      <div
        class="jodit-add-new-line"
        role="button"
        tabindex="-1"
        title="Break"
      >
        <span>
          <svg
            viewBox="0 0 128 128"
            xml:space="preserve"
          >
            
    
            <g>
              
        
              <polygon
                points="112.4560547,23.3203125 112.4560547,75.8154297 31.4853516,75.8154297 31.4853516,61.953125     16.0131836,72.6357422 0.5410156,83.3164063 16.0131836,93.9990234 31.4853516,104.6796875 31.4853516,90.8183594     112.4560547,90.8183594 112.4560547,90.8339844 127.4589844,90.8339844 127.4589844,23.3203125   "
              />
              
    
            </g>
            

          </svg>
        </span>
      </div>
    </div>
    <div
      style="display: none;"
    />
    <!---->
    <div
      class="text-editor__details"
    >
      <div
        class="v-messages theme--light error--text"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`text-editor Renders \`text-editor\` with files 1`] = `
<div>
  <span
    class="theme--light v-label text-editor__label mb-2"
    style="display: none;"
  >
    
  </span>
  <div
    class="text-editor"
  >
    <div
      class="jodit_container jodit_default_theme jodit_toolbar_size-middle jodit_wysiwyg_mode"
      contenteditable="false"
      style="min-height: 200px; min-width: 200px; max-width: 100%; height: auto; width: auto;"
    >
      <ul
        class="jodit_toolbar"
        style="width: auto;"
      >
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-bold"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_bold"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M747 1521q74 32 140 32 376 0 376-335 0-114-41-180-27-44-61.5-74t-67.5-46.5-80.5-25-84-10.5-94.5-2q-73 0-101 10 0 53-.5 159t-.5 158q0 8-1 67.5t-.5 96.5 4.5 83.5 12 66.5zm-14-746q42 7 109 7 82 0 143-13t110-44.5 74.5-89.5 25.5-142q0-70-29-122.5t-79-82-108-43.5-124-14q-50 0-130 13 0 50 4 151t4 152q0 27-.5 80t-.5 79q0 46 1 69zm-541 889l2-94q15-4 85-16t106-27q7-12 12.5-27t8.5-33.5 5.5-32.5 3-37.5.5-34v-65.5q0-982-22-1025-4-8-22-14.5t-44.5-11-49.5-7-48.5-4.5-30.5-3l-4-83q98-2 340-11.5t373-9.5q23 0 68.5.5t67.5.5q70 0 136.5 13t128.5 42 108 71 74 104.5 28 137.5q0 52-16.5 95.5t-39 72-64.5 57.5-73 45-84 40q154 35 256.5 134t102.5 248q0 100-35 179.5t-93.5 130.5-138 85.5-163.5 48.5-176 14q-44 0-132-3t-132-3q-106 0-307 11t-231 12z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-image"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_image"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M576 576q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1024 384v448h-1408v-192l320-320 160 160 512-512zm96-704h-1600q-13 0-22.5 9.5t-9.5 22.5v1216q0 13 9.5 22.5t22.5 9.5h1600q13 0 22.5-9.5t9.5-22.5v-1216q0-13-9.5-22.5t-22.5-9.5zm160 32v1216q0 66-47 113t-113 47h-1600q-66 0-113-47t-47-113v-1216q0-66 47-113t113-47h1600q66 0 113 47t47 113z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-brush"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_brush"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M896 1152q0-36-20-69-1-1-15.5-22.5t-25.5-38-25-44-21-50.5q-4-16-21-16t-21 16q-7 23-21 50.5t-25 44-25.5 38-15.5 22.5q-20 33-20 69 0 53 37.5 90.5t90.5 37.5 90.5-37.5 37.5-90.5zm512-128q0 212-150 362t-362 150-362-150-150-362q0-145 81-275 6-9 62.5-90.5t101-151 99.5-178 83-201.5q9-30 34-47t51-17 51.5 17 33.5 47q28 93 83 201.5t99.5 178 101 151 62.5 90.5q81 127 81 275z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-paragraph"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_paragraph"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1534 189v73q0 29-18.5 61t-42.5 32q-50 0-54 1-26 6-32 31-3 11-3 64v1152q0 25-18 43t-43 18h-108q-25 0-43-18t-18-43v-1218h-143v1218q0 25-17.5 43t-43.5 18h-108q-26 0-43.5-18t-17.5-43v-496q-147-12-245-59-126-58-192-179-64-117-64-259 0-166 88-286 88-118 209-159 111-37 417-37h479q25 0 43 18t18 43z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-left"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_left"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1792 1344v128q0 26-19 45t-45 19h-1664q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1664q26 0 45 19t19 45zm-384-384v128q0 26-19 45t-45 19h-1280q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1280q26 0 45 19t19 45zm256-384v128q0 26-19 45t-45 19h-1536q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1536q26 0 45 19t19 45zm-384-384v128q0 26-19 45t-45 19h-1152q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1152q26 0 45 19t19 45z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-undo jodit_disabled"
          disabled="disabled"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_undo"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1664 896q0 156-61 298t-164 245-245 164-298 61q-172 0-327-72.5t-264-204.5q-7-10-6.5-22.5t8.5-20.5l137-138q10-9 25-9 16 2 23 12 73 95 179 147t225 52q104 0 198.5-40.5t163.5-109.5 109.5-163.5 40.5-198.5-40.5-198.5-109.5-163.5-163.5-109.5-198.5-40.5q-98 0-188 35.5t-160 101.5l137 138q31 30 14 69-17 40-59 40h-448q-26 0-45-19t-19-45v-448q0-42 40-59 39-17 69 14l130 129q107-101 244.5-156.5t284.5-55.5q156 0 298 61t245 164 164 245 61 298z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-redo jodit_disabled"
          disabled="disabled"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_redo"
                viewBox="0 0 1792 1792"
              >
                
    
                <path
                  d="M1664 256v448q0 26-19 45t-45 19h-448q-42 0-59-40-17-39 14-69l138-138q-148-137-349-137-104 0-198.5 40.5t-163.5 109.5-109.5 163.5-40.5 198.5 40.5 198.5 109.5 163.5 163.5 109.5 198.5 40.5q119 0 225-52t179-147q7-10 23-12 14 0 25 9l137 138q9 8 9.5 20.5t-7.5 22.5q-109 132-264 204.5t-327 72.5q-156 0-298-61t-245-164-164-245-61-298 61-298 164-245 245-164 298-61q147 0 284.5 55.5t244.5 156.5l130-129q29-31 70-14 39 17 39 59z"
                />
                

              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-eraser"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_eraser"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M832 1408l336-384h-768l-336 384h768zm1013-1077q15 34 9.5 71.5t-30.5 65.5l-896 1024q-38 44-96 44h-768q-38 0-69.5-20.5t-47.5-54.5q-15-34-9.5-71.5t30.5-65.5l896-1024q38-44 96-44h768q38 0 69.5 20.5t47.5 54.5z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-dots"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_dots"
                enable-background="new 0 0 24 24"
                viewBox="0 0 24 24"
                xml:space="preserve"
              >
                
    
                <circle
                  cx="12"
                  cy="12"
                  r="2.2"
                />
                
    
                <circle
                  cx="12"
                  cy="5"
                  r="2.2"
                />
                
    
                <circle
                  cx="12"
                  cy="19"
                  r="2.2"
                />
                

              </svg>
            </span>
          </a>
        </li>
      </ul>
      <div
        class="jodit_workplace"
        contenteditable="false"
        style="min-height: 200px; height: auto;"
      >
        <div
          class="jodit_progress_bar"
        >
          <div />
        </div>
        <div
          aria-disabled="false"
          class="jodit_wysiwyg"
          contenteditable="true"
          spellcheck="true"
          style="min-height: 198px;"
          tabindex="-1"
        />
        <div
          class="jodit_error_box_for_messages"
        />
        <span
          class="jodit_placeholder"
          style="display: block;"
        >
          Type something
        </span>
        <div
          class="jodit_source"
        >
          <textarea
            class="jodit_source_mirror"
            style="height: 0px; min-height: 198px;"
          />
        </div>
        <div
          class="jodit_search"
        >
          <div
            class="jodit_search_box"
          >
            <div
              class="jodit_search_inputs"
            >
              <input
                class="jodit_search-query"
                placeholder="Search for"
                tabindex="0"
                type="text"
              />
              <input
                class="jodit_search-replace"
                placeholder="Replace with"
                tabindex="0"
                type="text"
              />
            </div>
            <div
              class="jodit_search_counts"
            >
              <span>
                0/0
              </span>
            </div>
            <div
              class="jodit_search_buttons"
            >
              <button
                class="jodit_search_buttons-next"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  
    
                  <path
                    d="M1395 736q0 13-10 23l-466 466q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l393 393 393-393q10-10 23-10t23 10l50 50q10 10 10 23z"
                  />
                  

                </svg>
              </button>
              <button
                class="jodit_search_buttons-prev"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  <path
                    d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
                  />
                </svg>
              </button>
              <button
                class="jodit_search_buttons-cancel"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 16 16"
                >
                  
    
                  <g
                    transform="translate(0,-1036.3622)"
                  >
                    
        
                    <path
                      d="m 2,1050.3622 12,-12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                    
        
                    <path
                      d="m 2,1038.3622 12,12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                    
    
                  </g>
                  

                </svg>
              </button>
              <button
                class="jodit_search_buttons-replace"
                tabindex="0"
                type="button"
              >
                Replace
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jodit_statusbar"
        style="display: block;"
      >
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Chars: 0
          </span>
        </div>
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Words: 0
          </span>
        </div>
        <div
          class="jodit_statusbar_item"
        >
          <ul
            class="jodit_xpath"
          >
            <li
              class="jodit_toolbar_btn jodit_toolbar_btn-selectall"
            >
              <a>
                <span>
                  <svg
                    class="jodit_icon jodit_icon_selectall"
                    viewBox="0 0 18 18"
                  >
                    
    
                    <g
                      fill-rule="evenodd"
                      stroke="none"
                      stroke-width="1"
                    >
                      
        
                      <g
                        transform="translate(-381.000000, -381.000000)"
                      >
                        
            
                        <g
                          transform="translate(381.000000, 381.000000)"
                        >
                          
                
                          <path
                            d="M0,2 L2,2 L2,0 C0.9,0 0,0.9 0,2 L0,2 Z M0,10 L2,10 L2,8 L0,8 L0,10 L0,10 Z M4,18 L6,18 L6,16 L4,16 L4,18 L4,18 Z M0,6 L2,6 L2,4 L0,4 L0,6 L0,6 Z M10,0 L8,0 L8,2 L10,2 L10,0 L10,0 Z M16,0 L16,2 L18,2 C18,0.9 17.1,0 16,0 L16,0 Z M2,18 L2,16 L0,16 C0,17.1 0.9,18 2,18 L2,18 Z M0,14 L2,14 L2,12 L0,12 L0,14 L0,14 Z M6,0 L4,0 L4,2 L6,2 L6,0 L6,0 Z M8,18 L10,18 L10,16 L8,16 L8,18 L8,18 Z M16,10 L18,10 L18,8 L16,8 L16,10 L16,10 Z M16,18 C17.1,18 18,17.1 18,16 L16,16 L16,18 L16,18 Z M16,6 L18,6 L18,4 L16,4 L16,6 L16,6 Z M16,14 L18,14 L18,12 L16,12 L16,14 L16,14 Z M12,18 L14,18 L14,16 L12,16 L12,18 L12,18 Z M12,2 L14,2 L14,0 L12,0 L12,2 L12,2 Z M4,14 L14,14 L14,4 L4,4 L4,14 L4,14 Z M6,6 L12,6 L12,12 L6,12 L6,6 L6,6 Z"
                          />
                          
            
                        </g>
                        
        
                      </g>
                      
    
                    </g>
                    

                  </svg>
                </span>
              </a>
            </li>
            ﻿
          </ul>
        </div>
      </div>
      <div
        class="jodit-add-new-line"
        role="button"
        tabindex="-1"
        title="Break"
      >
        <span>
          <svg
            viewBox="0 0 128 128"
            xml:space="preserve"
          >
            
    
            <g>
              
        
              <polygon
                points="112.4560547,23.3203125 112.4560547,75.8154297 31.4853516,75.8154297 31.4853516,61.953125     16.0131836,72.6357422 0.5410156,83.3164063 16.0131836,93.9990234 31.4853516,104.6796875 31.4853516,90.8183594     112.4560547,90.8183594 112.4560547,90.8339844 127.4589844,90.8339844 127.4589844,23.3203125   "
              />
              
    
            </g>
            

          </svg>
        </span>
      </div>
    </div>
    <div
      style="display: none;"
    />
    <!---->
    <div
      class="text-editor__details"
    >
      <div
        class="v-messages theme--light error--text"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`text-editor Renders \`text-editor\` with variables 1`] = `
<div>
  <span
    class="theme--light v-label text-editor__label mb-2"
    style="display: none;"
  >
    
  </span>
  <div
    class="text-editor"
  >
    <div
      class="jodit_container jodit_default_theme jodit_toolbar_size-middle jodit_wysiwyg_mode"
      contenteditable="false"
      style="min-height: 200px; min-width: 200px; max-width: 100%; height: auto; width: auto;"
    >
      <ul
        class="jodit_toolbar"
        style="width: auto;"
      >
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-bold"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_bold"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M747 1521q74 32 140 32 376 0 376-335 0-114-41-180-27-44-61.5-74t-67.5-46.5-80.5-25-84-10.5-94.5-2q-73 0-101 10 0 53-.5 159t-.5 158q0 8-1 67.5t-.5 96.5 4.5 83.5 12 66.5zm-14-746q42 7 109 7 82 0 143-13t110-44.5 74.5-89.5 25.5-142q0-70-29-122.5t-79-82-108-43.5-124-14q-50 0-130 13 0 50 4 151t4 152q0 27-.5 80t-.5 79q0 46 1 69zm-541 889l2-94q15-4 85-16t106-27q7-12 12.5-27t8.5-33.5 5.5-32.5 3-37.5.5-34v-65.5q0-982-22-1025-4-8-22-14.5t-44.5-11-49.5-7-48.5-4.5-30.5-3l-4-83q98-2 340-11.5t373-9.5q23 0 68.5.5t67.5.5q70 0 136.5 13t128.5 42 108 71 74 104.5 28 137.5q0 52-16.5 95.5t-39 72-64.5 57.5-73 45-84 40q154 35 256.5 134t102.5 248q0 100-35 179.5t-93.5 130.5-138 85.5-163.5 48.5-176 14q-44 0-132-3t-132-3q-106 0-307 11t-231 12z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-image"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_image"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M576 576q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm1024 384v448h-1408v-192l320-320 160 160 512-512zm96-704h-1600q-13 0-22.5 9.5t-9.5 22.5v1216q0 13 9.5 22.5t22.5 9.5h1600q13 0 22.5-9.5t9.5-22.5v-1216q0-13-9.5-22.5t-22.5-9.5zm160 32v1216q0 66-47 113t-113 47h-1600q-66 0-113-47t-47-113v-1216q0-66 47-113t113-47h1600q66 0 113 47t47 113z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-brush"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_brush"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M896 1152q0-36-20-69-1-1-15.5-22.5t-25.5-38-25-44-21-50.5q-4-16-21-16t-21 16q-7 23-21 50.5t-25 44-25.5 38-15.5 22.5q-20 33-20 69 0 53 37.5 90.5t90.5 37.5 90.5-37.5 37.5-90.5zm512-128q0 212-150 362t-362 150-362-150-150-362q0-145 81-275 6-9 62.5-90.5t101-151 99.5-178 83-201.5q9-30 34-47t51-17 51.5 17 33.5 47q28 93 83 201.5t99.5 178 101 151 62.5 90.5q81 127 81 275z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-paragraph"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_paragraph"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1534 189v73q0 29-18.5 61t-42.5 32q-50 0-54 1-26 6-32 31-3 11-3 64v1152q0 25-18 43t-43 18h-108q-25 0-43-18t-18-43v-1218h-143v1218q0 25-17.5 43t-43.5 18h-108q-26 0-43.5-18t-17.5-43v-496q-147-12-245-59-126-58-192-179-64-117-64-259 0-166 88-286 88-118 209-159 111-37 417-37h479q25 0 43 18t18 43z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_with_dropdownlist jodit_toolbar_btn-left"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_left"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1792 1344v128q0 26-19 45t-45 19h-1664q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1664q26 0 45 19t19 45zm-384-384v128q0 26-19 45t-45 19h-1280q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1280q26 0 45 19t19 45zm256-384v128q0 26-19 45t-45 19h-1536q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1536q26 0 45 19t19 45zm-384-384v128q0 26-19 45t-45 19h-1152q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1152q26 0 45 19t19 45z"
                />
              </svg>
            </span>
            <span
              class="jodit_with_dropdownlist-trigger"
            />
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-undo jodit_disabled"
          disabled="disabled"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_undo"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M1664 896q0 156-61 298t-164 245-245 164-298 61q-172 0-327-72.5t-264-204.5q-7-10-6.5-22.5t8.5-20.5l137-138q10-9 25-9 16 2 23 12 73 95 179 147t225 52q104 0 198.5-40.5t163.5-109.5 109.5-163.5 40.5-198.5-40.5-198.5-109.5-163.5-163.5-109.5-198.5-40.5q-98 0-188 35.5t-160 101.5l137 138q31 30 14 69-17 40-59 40h-448q-26 0-45-19t-19-45v-448q0-42 40-59 39-17 69 14l130 129q107-101 244.5-156.5t284.5-55.5q156 0 298 61t245 164 164 245 61 298z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-redo jodit_disabled"
          disabled="disabled"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_redo"
                viewBox="0 0 1792 1792"
              >
                
    
                <path
                  d="M1664 256v448q0 26-19 45t-45 19h-448q-42 0-59-40-17-39 14-69l138-138q-148-137-349-137-104 0-198.5 40.5t-163.5 109.5-109.5 163.5-40.5 198.5 40.5 198.5 109.5 163.5 163.5 109.5 198.5 40.5q119 0 225-52t179-147q7-10 23-12 14 0 25 9l137 138q9 8 9.5 20.5t-7.5 22.5q-109 132-264 204.5t-327 72.5q-156 0-298-61t-245-164-164-245-61-298 61-298 164-245 245-164 298-61q147 0 284.5 55.5t244.5 156.5l130-129q29-31 70-14 39 17 39 59z"
                />
                

              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-separator"
        />
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-eraser"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_eraser"
                viewBox="0 0 1792 1792"
              >
                <path
                  d="M832 1408l336-384h-768l-336 384h768zm1013-1077q15 34 9.5 71.5t-30.5 65.5l-896 1024q-38 44-96 44h-768q-38 0-69.5-20.5t-47.5-54.5q-15-34-9.5-71.5t30.5-65.5l896-1024q38-44 96-44h768q38 0 69.5 20.5t47.5 54.5z"
                />
              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-dots"
        >
          <a>
            <span>
              <svg
                class="jodit_icon jodit_icon_dots"
                enable-background="new 0 0 24 24"
                viewBox="0 0 24 24"
                xml:space="preserve"
              >
                
    
                <circle
                  cx="12"
                  cy="12"
                  r="2.2"
                />
                
    
                <circle
                  cx="12"
                  cy="5"
                  r="2.2"
                />
                
    
                <circle
                  cx="12"
                  cy="19"
                  r="2.2"
                />
                

              </svg>
            </span>
          </a>
        </li>
        <li
          class="jodit_toolbar_btn jodit_toolbar_btn-variables"
        >
          <span
            class="text-editor__variables-button"
          />
        </li>
      </ul>
      <div
        class="jodit_workplace"
        contenteditable="false"
        style="min-height: 200px; height: auto;"
      >
        <div
          class="jodit_progress_bar"
        >
          <div />
        </div>
        <div
          aria-disabled="false"
          class="jodit_wysiwyg"
          contenteditable="true"
          spellcheck="true"
          style="min-height: 198px;"
          tabindex="-1"
        >
          {{ test.test }}
        </div>
        <div
          class="jodit_error_box_for_messages"
        />
        <span
          class="jodit_placeholder"
          style="display: none;"
        >
          Type something
        </span>
        <div
          class="jodit_source"
        >
          <textarea
            class="jodit_source_mirror"
            style="height: 0px; min-height: 198px;"
          />
        </div>
        <div
          class="jodit_search"
        >
          <div
            class="jodit_search_box"
          >
            <div
              class="jodit_search_inputs"
            >
              <input
                class="jodit_search-query"
                placeholder="Search for"
                tabindex="0"
                type="text"
              />
              <input
                class="jodit_search-replace"
                placeholder="Replace with"
                tabindex="0"
                type="text"
              />
            </div>
            <div
              class="jodit_search_counts"
            >
              <span>
                0/0
              </span>
            </div>
            <div
              class="jodit_search_buttons"
            >
              <button
                class="jodit_search_buttons-next"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  
    
                  <path
                    d="M1395 736q0 13-10 23l-466 466q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l393 393 393-393q10-10 23-10t23 10l50 50q10 10 10 23z"
                  />
                  

                </svg>
              </button>
              <button
                class="jodit_search_buttons-prev"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 1792 1792"
                >
                  <path
                    d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
                  />
                </svg>
              </button>
              <button
                class="jodit_search_buttons-cancel"
                tabindex="0"
                type="button"
              >
                <svg
                  viewBox="0 0 16 16"
                >
                  
    
                  <g
                    transform="translate(0,-1036.3622)"
                  >
                    
        
                    <path
                      d="m 2,1050.3622 12,-12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                    
        
                    <path
                      d="m 2,1038.3622 12,12"
                      style="fill:none;stroke:#000000;stroke-width:2;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none"
                    />
                    
    
                  </g>
                  

                </svg>
              </button>
              <button
                class="jodit_search_buttons-replace"
                tabindex="0"
                type="button"
              >
                Replace
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jodit_statusbar"
        style="display: block;"
      >
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Chars: 13
          </span>
        </div>
        <div
          class="jodit_statusbar_item jodit_statusbar_item-right"
        >
          <span>
            Words: 3
          </span>
        </div>
        <div
          class="jodit_statusbar_item"
        >
          <ul
            class="jodit_xpath"
          >
            <li
              class="jodit_toolbar_btn jodit_toolbar_btn-selectall"
            >
              <a>
                <span>
                  <svg
                    class="jodit_icon jodit_icon_selectall"
                    viewBox="0 0 18 18"
                  >
                    
    
                    <g
                      fill-rule="evenodd"
                      stroke="none"
                      stroke-width="1"
                    >
                      
        
                      <g
                        transform="translate(-381.000000, -381.000000)"
                      >
                        
            
                        <g
                          transform="translate(381.000000, 381.000000)"
                        >
                          
                
                          <path
                            d="M0,2 L2,2 L2,0 C0.9,0 0,0.9 0,2 L0,2 Z M0,10 L2,10 L2,8 L0,8 L0,10 L0,10 Z M4,18 L6,18 L6,16 L4,16 L4,18 L4,18 Z M0,6 L2,6 L2,4 L0,4 L0,6 L0,6 Z M10,0 L8,0 L8,2 L10,2 L10,0 L10,0 Z M16,0 L16,2 L18,2 C18,0.9 17.1,0 16,0 L16,0 Z M2,18 L2,16 L0,16 C0,17.1 0.9,18 2,18 L2,18 Z M0,14 L2,14 L2,12 L0,12 L0,14 L0,14 Z M6,0 L4,0 L4,2 L6,2 L6,0 L6,0 Z M8,18 L10,18 L10,16 L8,16 L8,18 L8,18 Z M16,10 L18,10 L18,8 L16,8 L16,10 L16,10 Z M16,18 C17.1,18 18,17.1 18,16 L16,16 L16,18 L16,18 Z M16,6 L18,6 L18,4 L16,4 L16,6 L16,6 Z M16,14 L18,14 L18,12 L16,12 L16,14 L16,14 Z M12,18 L14,18 L14,16 L12,16 L12,18 L12,18 Z M12,2 L14,2 L14,0 L12,0 L12,2 L12,2 Z M4,14 L14,14 L14,4 L4,4 L4,14 L4,14 Z M6,6 L12,6 L12,12 L6,12 L6,6 L6,6 Z"
                          />
                          
            
                        </g>
                        
        
                      </g>
                      
    
                    </g>
                    

                  </svg>
                </span>
              </a>
            </li>
            ﻿
          </ul>
        </div>
      </div>
      <div
        class="jodit-add-new-line"
        role="button"
        tabindex="-1"
        title="Break"
      >
        <span>
          <svg
            viewBox="0 0 128 128"
            xml:space="preserve"
          >
            
    
            <g>
              
        
              <polygon
                points="112.4560547,23.3203125 112.4560547,75.8154297 31.4853516,75.8154297 31.4853516,61.953125     16.0131836,72.6357422 0.5410156,83.3164063 16.0131836,93.9990234 31.4853516,104.6796875 31.4853516,90.8183594     112.4560547,90.8183594 112.4560547,90.8339844 127.4589844,90.8339844 127.4589844,23.3203125   "
              />
              
    
            </g>
            

          </svg>
        </span>
      </div>
    </div>
    <div
      style="display: none;"
    >
      {{ test.test }}
    </div>
    <variables-menu-stub
      positionx="112"
      positiony="189"
      value=""
      variables="[object Object]"
      visible="true"
    />
    <div
      class="text-editor__details"
    >
      <div
        class="v-messages theme--light error--text"
      >
        <div
          class="v-messages__wrapper"
        />
      </div>
    </div>
  </div>
</div>
`;
